# TEL-DC-BOT

./: .flake8  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
discord_bot/: main.py
discord_bot/cogs/: basic.py  start.py
discord_bot/error_handling/: handler.py
