[tool.poetry]
name = "tel-dc-bot"
version = "0.1.0"
description = ""
authors = ["xdawxd <xrealz110@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git",rev = "462ba84809f43349296c44cbe6468f631a00edab",extras = ["voice"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "22.1.0"
isort = "5.10.1"
flake8 = "4.0.1"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
